--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game of Thrones</title>
-  <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
