Change path of script module in html

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="/styles/styles.css">
   <title>Game of Thrones</title>
-  <script type="module" src="/js/components/index.js"></script>
+  <script type="module" src="/js/index.js"></script>
 </head>
 
 <body>
