Add meta description and author

--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,17 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Accede a la lista de los personajes más destacados de Juego de Tronos, consulta su información, haz que hablen y acaba con ellos en un click.">
+  <meta name="author" content="Isbel Sáenz, Zilong Zhan, Ivet López." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
     rel="stylesheet">
   <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="/styles/styles.css">
-  <title>Game of Thrones</title>
   <script type="module" src="/js/index.js"></script>
+  <title>Game of Thrones</title>
 </head>
 
 <body>
