--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Isbel Sáenz, Zilong Zhan, Ivet López." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
     rel="stylesheet">
   <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="/styles/styles.css">
