Change language of meta description

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Accede a la lista de los personajes más destacados de Juego de Tronos, consulta su información, haz que hablen y acaba con ellos en un click.">
-  <meta name="author" content="Isbel Sáenz, Zilong Zhan, Ivet López." />
+    content="Access to most highlighted characters of Game of Thrones, check their information, make them speak and kill them with a simple click.">
+  <meta name="author" content="Isabel Sáenz, Zilong Zhan, Ivet López." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
