--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/styles.css">
   <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
   <script type="module" src="/js/index.js"></script>
